[gd_scene load_steps=15 format=3 uid="uid://dbostjvfhqykh"]

[ext_resource type="Script" path="res://Script/world.gd" id="1_ap0h3"]
[ext_resource type="PackedScene" uid="uid://d07fi45sjymvd" path="res://Scene/cam.tscn" id="1_gj8tx"]
[ext_resource type="Script" path="res://Script/CanvasLayer.gd" id="2_rjtkb"]
[ext_resource type="AudioStream" uid="uid://dlqj0eclev23g" path="res://coins-sound-effect-1-241818.mp3" id="4_n0qjc"]
[ext_resource type="AudioStream" uid="uid://clvy5tyxdir0" path="res://shuffle-cards-46455.mp3" id="5_2e853"]
[ext_resource type="AudioStream" uid="uid://b85a1u4y7sdw3" path="res://game-bonus-144751.mp3" id="6_ramfe"]

[sub_resource type="Shader" id="Shader_atgpo"]
code = "
// NOTE: Shader automatically converted from Godot Engine 4.0.2.stable's ProceduralSkyMaterial.
shader_type sky;
render_mode use_debanding;

uniform vec4 sky_top_color : source_color = vec4(0.385, 0.454, 0.55, 1.0);
uniform vec4 sky_horizon_color : source_color = vec4(0.646, 0.656, 0.67, 1.0);
uniform float sky_curve : hint_range(0, 1) = 0.15;
uniform float sky_energy = 1.0;

uniform sampler2D sky_cover : filter_linear, source_color, hint_default_black;
uniform vec4 sky_cover_modulate : source_color = vec4(1.0, 1.0, 1.0, 1.0);

uniform vec4 ground_bottom_color : source_color = vec4(0.2, 0.169, 0.133, 1.0);
uniform vec4 ground_horizon_color : source_color = vec4(0.646, 0.656, 0.67, 1.0);
uniform float ground_curve : hint_range(0, 1) = 0.02;
uniform float ground_energy = 1.0;

uniform float sun_angle_max = 30.0;
uniform float sun_curve : hint_range(0, 1) = 0.15;
uniform float exposure : hint_range(0, 128) = 1.0;

uniform sampler2D cloud_texture;
uniform sampler2D cloud_texture2;
uniform vec2 cloud_direction = vec2(1.0, 0.0);
uniform vec2 cloud_direction2 = vec2(-1.0, 0.5);
uniform vec2 cloud_scale = vec2(0.05, 0.05); // Más pequeño = más nubes
uniform float cloud_distance = 0.0;
uniform float cloud_speed = 2.0;
uniform float cloud_speed2 = 1.5;

void sky() {
	// Cielo base
	float v_angle = acos(clamp(EYEDIR.y, -1.0, 1.0));
	float c = (1.0 - v_angle / (PI * 0.5));
	vec3 sky = mix(sky_horizon_color.rgb, sky_top_color.rgb, clamp(1.0 - pow(1.0 - c, 1.0 / sky_curve), 0.0, 1.0));
	sky *= sky_energy;

	// Iluminación solar (4 posibles luces)
	if (LIGHT0_ENABLED) {
		float sun_angle = acos(dot(LIGHT0_DIRECTION, EYEDIR));
		if (sun_angle < LIGHT0_SIZE) {
			sky = LIGHT0_COLOR * LIGHT0_ENERGY;
		} else if (sun_angle < sun_angle_max) {
			float c2 = (sun_angle - LIGHT0_SIZE) / (sun_angle_max - LIGHT0_SIZE);
			sky = mix(LIGHT0_COLOR * LIGHT0_ENERGY, sky, clamp(1.0 - pow(1.0 - c2, 1.0 / sun_curve), 0.0, 1.0));
		}
	}

	// Sky cover opcional (bruma/textura extra)
	vec4 sky_cover_texture = texture(sky_cover, SKY_COORDS);
	sky += (sky_cover_texture.rgb * sky_cover_modulate.rgb) * sky_cover_texture.a * sky_cover_modulate.a * sky_energy;

	// === NUBES ===
	vec2 sky_uv = EYEDIR.xz / EYEDIR.y;
	vec3 clouds = texture(cloud_texture, (sky_uv * cloud_scale) + (TIME * cloud_direction * cloud_speed * 0.01)).rgb
	            - texture(cloud_texture2, (sky_uv * cloud_scale) + (TIME * cloud_direction2 * cloud_speed2 * 0.01)).rgb;
	clouds = clouds - smoothstep(0.0, EYEDIR.y, cloud_distance);
	clouds = clamp(clouds, 0.0, 1.0);
	sky += clouds;

	// Suelo
	c = (v_angle - (PI * 0.5)) / (PI * 0.5);
	vec3 ground = mix(ground_horizon_color.rgb, ground_bottom_color.rgb, clamp(1.0 - pow(1.0 - c, 1.0 / ground_curve), 0.0, 1.0));
	ground *= ground_energy;

	// Combina cielo o suelo según la dirección de la vista
	COLOR.rgb = mix(ground, sky, step(0.0, EYEDIR.y));
}"

[sub_resource type="FastNoiseLite" id="FastNoiseLite_vetj2"]

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_vdywl"]
width = 1024
height = 1024
seamless = true
noise = SubResource("FastNoiseLite_vetj2")

[sub_resource type="FastNoiseLite" id="FastNoiseLite_encm4"]

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_ctd20"]
width = 1024
height = 1024
seamless = true
noise = SubResource("FastNoiseLite_encm4")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_wn16w"]
shader = SubResource("Shader_atgpo")
shader_parameter/sky_top_color = Color(0.301961, 0.67451, 0.823529, 1)
shader_parameter/sky_horizon_color = Color(1, 1, 1, 1)
shader_parameter/sky_curve = 0.15
shader_parameter/sky_energy = 1.0
shader_parameter/sky_cover_modulate = Color(1, 1, 1, 1)
shader_parameter/ground_bottom_color = Color(0.172549, 0.368627, 0.462745, 1)
shader_parameter/ground_horizon_color = Color(0.909804, 0.898039, 0.92549, 1)
shader_parameter/ground_curve = 0.02
shader_parameter/ground_energy = 1.0
shader_parameter/sun_angle_max = 0.523599
shader_parameter/sun_curve = 0.15
shader_parameter/exposure = 1.0
shader_parameter/cloud_direction = Vector2(-1, 1)
shader_parameter/cloud_direction2 = Vector2(1, -1)
shader_parameter/cloud_scale = Vector2(0.07, 0.05)
shader_parameter/cloud_distance = 0.015
shader_parameter/cloud_speed = 0.006
shader_parameter/cloud_speed2 = 1.5
shader_parameter/cloud_texture = SubResource("NoiseTexture2D_vdywl")
shader_parameter/cloud_texture2 = SubResource("NoiseTexture2D_ctd20")

[sub_resource type="Sky" id="Sky_t1nd4"]
sky_material = SubResource("ShaderMaterial_wn16w")

[sub_resource type="Environment" id="Environment_i5ea8"]
background_mode = 2
sky = SubResource("Sky_t1nd4")

[node name="world" type="Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.104108, -0.104539, -0.154787)
script = ExtResource("1_ap0h3")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
script = ExtResource("2_rjtkb")

[node name="LineEdit" type="LineEdit" parent="CanvasLayer"]
offset_left = 32.0
offset_top = 533.0
offset_right = 238.0
offset_bottom = 579.0
placeholder_text = "How many boxs are there"
max_length = 2

[node name="Label" type="Label" parent="CanvasLayer"]
offset_left = 49.0
offset_top = 585.0
offset_right = 238.0
offset_bottom = 615.0
text = "PRESS Enter to submit"

[node name="Score" type="Label" parent="CanvasLayer"]
offset_left = 56.0
offset_top = 35.0
offset_right = 248.0
offset_bottom = 111.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 28
text = "Score : 0
"

[node name="TimeSpending" type="Label" parent="CanvasLayer"]
offset_left = 842.0
offset_top = 33.0
offset_right = 1129.0
offset_bottom = 109.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 28
text = "Score : 0
"
horizontal_alignment = 2

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_i5ea8")

[node name="Cam" parent="." instance=ExtResource("1_gj8tx")]

[node name="sfx_coin" type="AudioStreamPlayer2D" parent="."]
visible = false
stream = ExtResource("4_n0qjc")
volume_db = -3.436

[node name="sfx_level_switching" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_2e853")
volume_db = 2.811
pitch_scale = 1.05

[node name="Correct_Answer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_ramfe")
volume_db = -9.837
pitch_scale = 0.89
